back key 제어 webview 생성

--- a/app/src/main/res/layout/fragment_common_web.xml
+++ b/app/src/main/res/layout/fragment_common_web.xml
@@ -40,6 +40,7 @@
             app:layout_constraintBottom_toBottomOf="parent">
 
             <WebView
+                android:id="@+id/webView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
