--- a/app/src/main/res/layout/main_actionbar_layout.xml
+++ b/app/src/main/res/layout/main_actionbar_layout.xml
@@ -21,7 +21,7 @@
             android:id="@+id/actionBarBtnBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> activity.backStackCount()}"
+            android:onClick="@{() -> activity.backInterfaceCheck()}"
             android:text="빽"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
