--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,12 +52,35 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnWebview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="webview"
                 android:onClick="@{() -> fragment.onClickBtnWebview()}"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/btnDialog_1"
                 app:layout_constraintTop_toTopOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnDialog_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="custom dialog 1"
+                app:layout_constraintBottom_toTopOf="@id/btnDialog_2"
+                android:onClick="@{() -> fragment.onClickBtnCustomDialog1()}"
+                app:layout_constraintTop_toBottomOf="@id/btnWebview"
+                app:layout_constraintEnd_toStartOf="@id/btnDialog_2"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnDialog_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="custom dialog 2"
+                android:layout_marginStart="5dp"
+                app:layout_constraintTop_toBottomOf="@id/btnWebview"
+                android:onClick="@{() -> fragment.onClickBtnCustomDialog2()}"
+                app:layout_constraintStart_toEndOf="@id/btnDialog_1"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
